Fix bad contrast of links in alerts

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -10267,7 +10267,7 @@ noscript {
   background: transparent;
   text-transform: uppercase;
   cursor: pointer;
-  color: var(--color-text-brand);
+  color: var(--color-text-brand-on-inverted);
   font-weight: 700;
   border-radius: 4px;
   padding: 0 4px;
